--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
                     total: 1500,
                     segments: [
                         { label: 'General Queries', value: 1200, color: '#586196' },
-                        { label: 'Undo screening vote', value: 99, color: '#36a2eb' },
+                        { label: 'Undo vote', value: 99, color: '#36a2eb' },
                         { label: 'Reviewer mode', value: 81, color: '#4bc0c0' },
-                        { label: 'More sorting options', value: 45, color: '#ff6384' },
+                        { label: 'Sorting options', value: 45, color: '#ff6384' },
                         { label: 'Other', value: 75, color: '#9b59b6' }
                     ]
                 },
@@ -217,9 +217,9 @@
                     total: 1250,
                     segments: [
                         { label: 'General Queries', value: 1000, color: '#586196' },
-                        { label: 'Incompatible import file', value: 125, color: '#36a2eb' },
-                        { label: 'External issues', value: 34, color: '#4bc0c0' },
-                        { label: 'Missing info in references', value: 28, color: '#ff6384' },
+                        { label: 'Incompatible format', value: 125, color: '#36a2eb' },
+                        { label: 'Local issues', value: 34, color: '#4bc0c0' },
+                        { label: 'Missing info', value: 28, color: '#ff6384' },
                         { label: 'Other', value: 63, color: '#9b59b6' }
                     ]
                 },
@@ -228,9 +228,9 @@
                     total: 700,
                     segments: [
                         { label: 'General Queries', value: 560, color: '#586196' },
-                        { label: 'Set up multiple DE/QA templates', value: 47, color: '#36a2eb' },
-                        { label: 'Improved PDF copy-paste', value: 37, color: '#4bc0c0' },
-                        { label: 'Page loading issue / "load more"', value: 21, color: '#ff6384' },
+                        { label: 'Multiple templates', value: 47, color: '#36a2eb' },
+                        { label: 'PDF copy-paste', value: 37, color: '#4bc0c0' },
+                        { label: 'Load more', value: 21, color: '#ff6384' },
                         { label: 'Other', value: 35, color: '#9b59b6' }
                     ]
                 }
