--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <section id="platform-stage-issues" class="mb-16">
             <h2 class="text-3xl font-bold text-center mb-2 section-title">Platform Stage-related Ticket Queries </h2>
             <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">
-                We analysed our support tickets by platform stage to identify where the highest volumes of queries occur. "Screening" (which includes Title and abstracts screening and Full text review stages) remains the most frequent query, followed closely by "Import" and "DE2", indicating key areas for product refinement and user education.
+                We analysed our support tickets by platform stage to identify where the highest volumes of queries occur. "Screening" (which includes Title and abstracts screening and Full text review stages) remains the most frequent query, followed closely by "Import" and "DE2", indicating key priority areas for our users. DE1 tagged tickets are steadily increasing, approaching the top platform stage-related issues in 5th place (bold). 
             </p>
 
     <canvas id="combinedChart"></canvas>
@@ -481,24 +481,24 @@
                 <div class="card">
                     <h3 class="text-2xl font-bold mb-4" style="color: #003f5c;">Account Merge Requests</h3>
                     <ul class="space-y-4 text-gray-700">
-                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ef5675;"></span><span><strong class="block">Users creating multiple accounts (individual and institution) and then asking to merge accounts</strong><br> CM IMPACT rating<sup>c</sup>: 3<br>Ticket REACH<sup>d</sup>: approx 80% of non-general query<sup>e</sup> related Acct mgmt-tagged tickets.</span></li>
+                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ef5675;"></span><span><strong class="block">Users creating multiple accounts (individual and institution) and then asking to merge accounts.</strong><br> CM Impact rating<sup>c</sup>: 3<br>Ticket Reach<sup>d</sup>: Approx 80% of non-general query<sup>e</sup> related "Acct mgmt"-tagged tickets.</span></li>
                     </ul>
                 </div>
                 <div class="card">
                     <h3 class="text-2xl font-bold mb-4" style="color: #003f5c;">Invitation Failures</h3>
                     <ul class="space-y-4 text-gray-700">
-                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ff764a;"></span><span><strong class="block">Organisational membership and review invitations expiring without being clicked or not reaching the user in the first place</strong><br> CM IMPACT rating<sup>c</sup>: 3<br>Ticket REACH<sup>d</sup>: approx 80% of non-general query<sup>e</sup> related Invitation Issue-tagged tickets.</span></li>
+                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ff764a;"></span><span><strong class="block">Organisational membership and review invitations expiring without being clicked or not reaching the user in the first place.</strong><br> CM Impact rating<sup>c</sup>: 3<br>Ticket Reach<sup>d</sup>: Approx 80% of non-general query<sup>e</sup> related "Invitation Issue"-tagged tickets.</span></li>
                     </ul>
                 </div>
                 <div class="card">
-                    <h3 class="text-2xl font-bold mb-4" style="color: #003f5c;">Review Reset Needs</h3>
+                    <h3 class="text-2xl font-bold mb-4" style="color: #003f5c;">User-enabled Review Reset</h3>
                     <ul class="space-y-4 text-gray-700">
-                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ffa600;"></span><span><strong class="block">Users want to reset their own reviews because of wrong import or change in the search strategy</strong><br> CM IMPACT rating<sup>c</sup>: 3<br>Ticket REACH<sup>d</sup>: approx 80% of non-general query<sup>e</sup> related Reset-tagged tickets.</span></li>
+                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ffa600;"></span><span><strong class="block">Users want to reset their own reviews because of wrong import or change in the search strategy.</strong><br> CM Impact rating<sup>c</sup>: 3<br>Ticket Reach<sup>d</sup>: Approx 80% of non-general query<sup>e</sup> related "Reset"-tagged tickets.</span></li>
                     </ul></span></li>
                     </ul>
                 </div>
             </div>
-        <p class="text-sm text-gray-500 mt-8 text-center">c - IMPACT ratings: 1 = Low impact (minor annoyance, can wait); 2 = Medium impact (some disruption, feasible workaround available that is not time consuming for the CM or the user); 3 = High impact (blocks user from access or resuming work, negatively affects trust, a strong valid need for the user, negatively impacts the Community team's efficiency)<br>d - the number of GrooveHQ tickets affected<br>e - general queries are tickets that do not require investigation or resolution, including general questions, requests already covered by existing processes or the Knowledge Base (e.g., how-to articles), expected platform behavior, CM requests outside standard services, tickets with no user follow-up, cases without platform functionality issues, external user issues, GrooveHQ autotagging errors, spam emails, and tickets incorrectly tagged by CMs.</p>  
+        <p class="text-sm text-gray-500 mt-8 text-center">c - Impact ratings: 1 = Low impact (minor annoyance, can wait); 2 = Medium impact (some disruption, feasible workaround available that is not time consuming for the CM or the user); 3 = High impact (blocks user from access or resuming work, negatively affects trust, a strong valid need for the user, negatively impacts the Community team's efficiency)<br>d - The number of GrooveHQ tickets reported per pain point<br>e - General queries are tickets that do not require investigation or resolution, including general questions, requests already covered by existing processes or the Knowledge Base (e.g., how-to articles), expected platform behavior, CM requests outside standard services, tickets with no user follow-up, cases without platform functionality issues, external user issues, GrooveHQ autotagging errors, spam emails, and tickets incorrectly tagged by CMs.</p>  
         </section>
 
         <hr class="border-t-2 border-gray-200 my-16"> <!-- Visual separator -->
