--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <section id="platform-stage-issues" class="mb-16">
             <h2 class="text-3xl font-bold text-center mb-2 section-title">Platform Stage-related Ticket Queries </h2>
             <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">
-                We analysed our support tickets by platform stage to identify where the highest volumes of queries occur. "Screening" (which includes Title and abstracts screening and Full text review stages) remains the most frequent query, followed closely by "Import" and "DE2", indicating key priority areas for our users. <strong>DE1 tagged tickets are steadily increasing, approaching the top platform stage-related issues in 5th place.<strong> 
+                We analysed our support tickets by platform stage to identify where the highest volumes of queries occur. "Screening" (which includes Title and abstracts screening and Full text review stages) remains the most frequent query, followed closely by "Import" and "DE2", indicating key priority areas for our users. <strong>DE1 tagged tickets are steadily increasing, approaching the top platform stage-related issues in 5th place.</strong> 
             </p>
 
     <canvas id="combinedChart"></canvas>
