--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
         <hr class="border-t-2 border-gray-200 my-16"> <!-- Visual separator -->
 
         <section id="kpis" class="mb-16">
-            <h2 class="text-3xl font-bold text-center mb-2 section-title">Community Support at a Glance</h2>
-            <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">
+            <h2 class="text-3xl font-bold text-left mb-2 section-title">1. Community Support at a Glance</h2>
+            <p class="text-left text-gray-600 mb-8 max-w-3xl mx-auto">
                 Core metrics and performance highlights <br>
                 Stakeholders: All
             </p>
