--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
         <section id="kpis" class="mb-16">
             <h2 class="text-3xl font-bold text-left mb-2 section-title">1. Community Support at a Glance</h2>
-            <p class="text-left text-gray-600 mb-8 max-w-3xl mx-auto">
+            <p class="text-left text-gray-600 mb-8 max-w-3xl mr-auto ml-0">
                 Core metrics and performance highlights <br>
                 Stakeholders: All
             </p>
