--- a/index.html
+++ b/index.html
@@ -107,9 +107,18 @@
 
     <main class="container mx-auto px-6 py-12">
         <section id="summary" class="mb-16">
-            <h2 class="text-3xl font-bold text-center mb-2 section-title">Executive Summary</h2>
-            <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">
-                This report highlights key support metrics, user feedback, and operational insights from July 2024 to June 2025. It details our ongoing commitment to efficient support, identifies areas for product enhancement, and provides a forward-looking perspective on our strategic initiatives.
+            <h2 class="text-3xl font-bold text-left mb-2 section-title">Executive Summary</h2>
+            <p class="text-center text-gray-600 mb-8 max-w-3xl mr-auto ml-0">
+                This report provides an overview of the Community Team’s support activity through GrooveHQ inbox from July 2024 to June 2025. It focuses on trends in ticket volume, user queries across review stages, regional distribution, and common support topics.<br>
+                <br>
+                Key insights include:
+                <ul>
+                    <li><strong>Response time performance</strong> remained strong, with a consistently low median response time that meets our service expectations.</li>
+                    <li><strong>Top queried review stages</strong> were identified, along with the most frequent types of user issues within those stages.</li>
+                    <li><strong>Regional ticket distribution</strong> highlighted geographic patterns in support demand, including the most commonly used email domains per region.</li>
+                    <li><strong>Chatbot (Helply) engagement</strong> data offered additional perspective on recurring support needs and user behavior in self-service contexts.</li>    
+                </ul>
+                The analysis in this report will inform targeted improvements to the inbox support process and guide resource development efforts aimed at reducing preventable queries and improving user experience.
             </p>
             <div class="card max-w-4xl mx-auto p-8">
                 <p class="text-gray-700 leading-relaxed text-lg">
