--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </header>
 
     <main class="container mx-auto px-6 py-12">
-                  <section id="summary" class="mb-16">
+            <section id="summary" class="mb-16">
                 <h2 class="text-3xl font-bold text-left mb-2 section-title">Executive Summary</h2>
                 
                 <!-- Wrapper div to control max-width and make content left-aligned -->
@@ -134,7 +134,13 @@
                         The analysis in this report will inform targeted improvements to the inbox support process and guide resource development efforts aimed at reducing preventable queries and improving user experience.
                     </p>
                 </div>
+            
+                <!-- This card div now also left-aligned -->
+                <div class="card max-w-4xl p-8 rounded-lg shadow-md bg-white">
+                    <!-- Content of this div is empty as the paragraph was removed previously -->
+                </div>
             </section>
+
 
 
 
