--- a/index.html
+++ b/index.html
@@ -1332,13 +1332,12 @@
                     <li class="flex items-start">
                         <span class="text-2xl mr-4" style="color: #003f5c;">&#128176;</span>
                         <div>
-                            <h4 class="font-bold text-lg">Combine findings from this report with other key feedback sources</h4>
-                            <p class="text-gray-600">Including webinar Q&As, webinar surveys, user conversations during our face-to-face interactions, Sales team and Academic Success team input, and knowledge base traffic analysis to:</p>
+                            <h4 class="font-bold text-lg"><strong>Combine findings from this report with other key feedback sources</strong> including webinar Q&As, webinar surveys, user conversations during our face-to-face interactions, Sales team and Academic Success team input, and knowledge base traffic analysis to:</p>
                         </div>
                     </li>
                     <li class="flex items-start ml-8">
                         <span class="text-xl mr-2" style="color: #003f5c;">&ndash;</span>
-                        <p class="text-gray-600">Identify gaps in our self-service resources<sup>g</sup></p>
+                        <p class="text-gray-600">Identify and fill gaps in our self-service resources<sup>g</sup></p>
                     </li>
                     <li class="flex items-start ml-8">
                         <span class="text-xl mr-2" style="color: #003f5c;">&ndash;</span>
