--- a/index.html
+++ b/index.html
@@ -1332,7 +1332,7 @@
                     <li class="flex items-start">
                         <span class="text-2xl mr-4" style="color: #003f5c;">&#128176;</span>
                         <div>
-                            <h4 class="font-bold text-lg"><strong>Combine findings from this report with other key feedback sources</strong> including webinar Q&As, webinar surveys, user conversations during our face-to-face interactions, Sales team and Academic Success team input, and knowledge base traffic analysis to:</p>
+                            <h4 class="font-bold text-lg">Combine findings from this report with other key feedback sources including webinar Q&As, webinar surveys, user conversations during our face-to-face interactions, Sales team and Academic Success team input, and knowledge base traffic analysis to:</p>
                         </div>
                     </li>
                     <li class="flex items-start ml-8">
@@ -1378,7 +1378,7 @@
                 <p class="text-left text-gray-600 mb-8"> <!-- Removed max-w-3xl mx-auto -->
                     <ul class="list-disc list-inside text-gray-700 space-y-2">
                         <li>Raw data can be accessed <a href="https://drive.google.com/drive/folders/1xXCkuP1W5ORsc97fyOXA7p-KVwlVR-2u?usp=drive_link" target="_blank" class="text-blue-600 hover:underline">here</a> for more information.</li>
-                        <li>Disclaimer: Platform stage-related Ticket Queries, Top 3 queries per category (Percentages), Users' Pain Points, and Monthly Audit of User Wishlist and Feedback were analysed based on the tickets that were tagged by the CM team. Note that some relevant tickets may not have been tagged, while some irrelevant tickets may have been incorrectly tagged.</li>
+                        <li>Disclaimer: (to be changed) Platform stage-related Ticket Queries, Top 3 queries per category (Percentages), Users' Pain Points, and Monthly Audit of User Wishlist and Feedback were analysed based on the tickets that were tagged by the CM team. Note that some relevant tickets may not have been tagged, while some irrelevant tickets may have been incorrectly tagged.</li>
                     </ul>
                 </p>
             </div>
@@ -1388,7 +1388,6 @@
     <footer class="bg-gray-800 text-white mt-16">
         <div class="container mx-auto px-6 py-4 text-center text-sm">
             <p>&copy; 2025 Covidence.</p>
-            <p class="mt-1">Internal Report - Completed by Tenber Grota on XX July 2025 in collaboration with Nancy El-Shayeb / Approved by Laura Mellor on XX July 2025 / Released XX July 2025</p>
         </div>
     </footer>
 
