--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
         <section id="groovehq-deep-dive" class="mb-16">
             <h2 class="text-3xl font-bold text-left mb-2 section-title">2. GrooveHQ Deep Dive </h2>
             <p class="text-left text-gray-600 mb-8">
-                Trends and insights from the GrooveHQ deep dive inbox analysis<br>
+                Trends and insights from the GrooveHQ inbox analysis<br>
                 Stakeholders: All
             </p>
 
@@ -432,7 +432,7 @@
             <h3 class="text-2xl font-bold text-left mb-2 mt-16 section-title ml-8">2.2. Breakdown of Query Types Per Stage (Top 3 Stages)</h3>
             <!-- Moved paragraph and chart here -->
             <p class="text-left text-gray-600 mb-8 ml-8">
-                Refine: Top 3 non-general queries for each review stage. General queries<sup>c</sup> and other non-top non-general queries are excluded. 
+                This bar chart shows the top 3 query types<sup>c</sup> per review stage excluding general queries. 
             </p>
 
             <div class="card p-6 ml-8"> <!-- Wrapped combinedChart in a card -->
@@ -453,7 +453,7 @@
                     </div>
                 </div>
             </div>
-            <p class="footnote mt-8 text-left ml-8">c - General queries are tickets that do not require investigation or resolution, including general questions, requests already covered by existing processes or the Knowledge Base (e.g., how-to articles), expected platform behavior, CM requests outside standard services, tickets with no user follow-up, cases without platform functionality issues, external user issues, GrooveHQ autotagging errors, spam emails, and tickets incorrectly tagged by CMs.</p>
+            <p class="footnote mt-8 text-left ml-8">c - query types - describe</p>
 
             <script>
                 window.addEventListener('load', function() {
@@ -760,7 +760,7 @@
             <!-- Paragraph now left-aligned and without max-width -->
             <p class="text-left text-gray-600 mb-8">
                 Areas of frustration and friction <br>
-                Stakeholders: Product and Engineering, Academic Success
+                Stakeholders: P&E, Academic Success
             </p>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="card">
